# inscenium

./: .editorconfig  .env.example  .gitattributes  .gitignore  .ins-verify.sh  .pre-commit-config.yaml  .releaserc  .releaserc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  fix_inscenium_env.sh  pyproject.toml  pyproject.toml.bak  pyproject.toml.bak.1762036882  pyproject.toml.bak.1762036969
.dependabot/: config.yml
.github/workflows/: inscenium-smoke.yml
.venv-runtime/: pyvenv.cfg
configs/pipeline/: cpu_default.yaml
configs/zones/: demo.json
control/api/: README.md  go.mod  go.sum  graph.proto  http_gateway.go  openapi.yaml
docs/: ARCHITECTURE.md  drm_notes.md
docs/architecture/: adr_0001_edge_sidecar.md  data_flow.md  system_overview.md
docs/ip/: claims_candidates.md  prior_art_risks.md  provisional_outline.md
docs/specs/: prs_metric_v1.md  (+1 more)
edge/: Cargo.toml  __init__.py  edge_processor.py
edge/edge_worker_wasm/: Cargo.toml
edge/edge_worker_wasm/src/: lib.rs
inscenium/: __init__.py  __main__.py  cli.py
measure/: __init__.py  prs_meter.py
perception/: __init__.py  color_pipeline.py  depth_midas.py  flow_raft.py  sam2_runner.py  shot_detect.py  surfel_proposals.py
render/: __init__.py  compositor_bindings.py  compositor_cuda.cu  qc_metrics.py  sidecar_packager.py
sgi/: __init__.py  rights_ledger.py  sgi_builder.py  sgi_matcher.py  sgi_schema.sql
tests/: conftest.py  test_acceptance_quality.py  test_edge_manifest.go  test_gateway_api.go  test_pipeline_stubs.py  test_video_smoke.py
(+100 files in other folders)
